; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/ixl/extr_i40e_common.c_i40e_led_is_mine.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/ixl/extr_i40e_common.c_i40e_led_is_mine.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.i40e_hw = type { i32, %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32* }

@I40E_GLGEN_GPIO_CTL_PRT_NUM_MASK = common dso_local global i32 0, align 4
@I40E_GLGEN_GPIO_CTL_PRT_NUM_SHIFT = common dso_local global i32 0, align 4
@I40E_GLGEN_GPIO_CTL_PRT_NUM_NA_MASK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.i40e_hw*, i32)* @i40e_led_is_mine to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @i40e_led_is_mine(%struct.i40e_hw* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.i40e_hw*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store %struct.i40e_hw* %0, %struct.i40e_hw** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 0, i32* %6, align 4
  %8 = load %struct.i40e_hw*, %struct.i40e_hw** %4, align 8
  %9 = getelementptr inbounds %struct.i40e_hw, %struct.i40e_hw* %8, i32 0, i32 1
  %10 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %9, i32 0, i32 0
  %11 = load i32*, i32** %10, align 8
  %12 = load i32, i32* %5, align 4
  %13 = sext i32 %12 to i64
  %14 = getelementptr inbounds i32, i32* %11, i64 %13
  %15 = load i32, i32* %14, align 4
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %18, label %17

17:                                               ; preds = %2
  store i32 0, i32* %3, align 4
  br label %41

18:                                               ; preds = %2
  %19 = load %struct.i40e_hw*, %struct.i40e_hw** %4, align 8
  %20 = load i32, i32* %5, align 4
  %21 = call i32 @I40E_GLGEN_GPIO_CTL(i32 %20)
  %22 = call i32 @rd32(%struct.i40e_hw* %19, i32 %21)
  store i32 %22, i32* %6, align 4
  %23 = load i32, i32* %6, align 4
  %24 = load i32, i32* @I40E_GLGEN_GPIO_CTL_PRT_NUM_MASK, align 4
  %25 = and i32 %23, %24
  %26 = load i32, i32* @I40E_GLGEN_GPIO_CTL_PRT_NUM_SHIFT, align 4
  %27 = ashr i32 %25, %26
  store i32 %27, i32* %7, align 4
  %28 = load i32, i32* %6, align 4
  %29 = load i32, i32* @I40E_GLGEN_GPIO_CTL_PRT_NUM_NA_MASK, align 4
  %30 = and i32 %28, %29
  %31 = icmp ne i32 %30, 0
  br i1 %31, label %38, label %32

32:                                               ; preds = %18
  %33 = load i32, i32* %7, align 4
  %34 = load %struct.i40e_hw*, %struct.i40e_hw** %4, align 8
  %35 = getelementptr inbounds %struct.i40e_hw, %struct.i40e_hw* %34, i32 0, i32 0
  %36 = load i32, i32* %35, align 8
  %37 = icmp ne i32 %33, %36
  br i1 %37, label %38, label %39

38:                                               ; preds = %32, %18
  store i32 0, i32* %3, align 4
  br label %41

39:                                               ; preds = %32
  %40 = load i32, i32* %6, align 4
  store i32 %40, i32* %3, align 4
  br label %41

41:                                               ; preds = %39, %38, %17
  %42 = load i32, i32* %3, align 4
  ret i32 %42
}

declare dso_local i32 @rd32(%struct.i40e_hw*, i32) #1

declare dso_local i32 @I40E_GLGEN_GPIO_CTL(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
